refactor: remove all warnings
refactor: FollowDTO and UnfollowDTO to MessageDTO